--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,14 @@
-All are Python 3 pakages
-
-PIL - $ pip3 install pillow
-
-matplotlib - $ python -m pip install -U matplotlib
-
-libtiff - $ pip3 install libtiff 
-
-scipy - $ python -m pip install --user numpy scipy matplotlib ipython jupyter pandas sympy nose
-
-numpy - will be instaled by the avove command for scipy
-
-glob - $ pip3 install glob2
-       $ pip3 install glob3
-
-cv2 - Please refer this link "https://pypi.org/project/opencv-python/" to install the opencv pakage
-
-os - OS is python's standard library. So no need to download it.
-
-math - math is python's standard library. So no need to download it.
-
-sklearn - $pip install -U scikit-learn
-
-skimage - pip install scikit-image
-
-tensorflow - Please refer this link "https://www.tensorflow.org/install/pip" to install tensorflow
-
-keras - $ sudo pip install keras
-        (or)
-        $ pip install keras
+Pillow==6.0.0
+matplotlib==3.1.0
+libtiff
+numpy==1.16.4
+scipy==1.3.0
+pandas==0.24.2
+sympy==1.4
+glob2
+glob3
+opencv-python==4.1.0.25
+scikit-learn
+scikit-image==0.15.0
+tensorflow-gpu==1.4.0
+Keras==2.1.3
